[gd_scene load_steps=3 format=3 uid="uid://cbuigcku4gwba"]

[ext_resource type="Texture2D" uid="uid://i8e1aeitbmgb" path="res://assets/graphics/ui/icons/stats/attack.png" id="1_3xwum"]
[ext_resource type="Script" path="res://src/core/ui/game/actorstatspanel/actor_stats_panel_stat.gd" id="1_odeen"]

[node name="ActorStatsPanelStat" type="HBoxContainer"]
offset_right = 53.0
offset_bottom = 8.0
script = ExtResource("1_odeen")
icon = ExtResource("1_3xwum")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_3xwum")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 1
theme_override_constants/margin_bottom = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StatName" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Stat"

[node name="Colon" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="StatValue" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="StatMod" type="Label" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "(+1)"
